// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Welcome Welcome is not shown if loading packages 1`] = `null`;

exports[`Welcome Welcome is not shown if packages occurs 1`] = `null`;

exports[`Welcome Welcome renderes correctly 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation6 css-1p3yn26-MuiPaper-root"
>
  <div
    className="css-1y48f0p-MuiStack-root"
  >
    <span
      className="MuiTypography-root MuiTypography-button css-1xjj6hs-MuiTypography-root"
    >
      Welcome to poetry-parser!
    </span>
    <p
      className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
    >
      Begin explorating your poetry.lock -file by uploading file.
    </p>
    <a
      className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root  css-sghohy-MuiButtonBase-root-MuiButton-root"
      href="/upload"
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
    >
      Upload
    </a>
  </div>
</div>
`;

exports[`Welcome Welcome shows if failed 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation6 css-1p3yn26-MuiPaper-root"
>
  <div
    className="css-1y48f0p-MuiStack-root"
  >
    <span
      className="MuiTypography-root MuiTypography-button css-1xjj6hs-MuiTypography-root"
    >
      Welcome to poetry-parser!
    </span>
    <p
      className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
    >
      Begin explorating your poetry.lock -file by uploading file.
    </p>
    <a
      className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root  css-sghohy-MuiButtonBase-root-MuiButton-root"
      href="/upload"
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
    >
      Upload
      <span
        className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </a>
  </div>
</div>
`;
